[tool.poetry]
name = "py-mysql"
version = "0.1.0"
description = ""
authors = ["tsiresymila <tsiresymila@gmail.com>"]
readme = "README.md"
packages = [{include = "py_mysql"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
